--- a/WindowTiler.app/Contents/Info.plist
+++ b/WindowTiler.app/Contents/Info.plist
@@ -11,11 +11,11 @@
 	<key>CFBundleIconFile</key>
 	<string>applet</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.apple.ScriptEditor.id.Tile-Windows-copy-2</string>
+	<string>com.apple.ScriptEditor.id.WindowTiler</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Tile Windows copy 2</string>
+	<string>WindowTiler</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -42,11 +42,11 @@
 		<key>name</key>
 		<string>ScriptWindowState</string>
 		<key>positionOfDivider</key>
-		<real>533</real>
+		<real>968</real>
 		<key>savedFrame</key>
-		<string>765 452 1144 784 0 0 2560 1417 </string>
+		<string>35 164 1264 1219 0 0 2560 1417 </string>
 		<key>selectedTab</key>
-		<string>result</string>
+		<string>description</string>
 	</dict>
 </dict>
 </plist>
