--- a/WindowTiler copy.app/Contents/Info.plist
+++ b/WindowTiler copy.app/Contents/Info.plist
@@ -46,7 +46,7 @@
 		<key>savedFrame</key>
 		<string>60 188 1264 1219 0 0 2560 1417 </string>
 		<key>selectedTab</key>
-		<string>result</string>
+		<string>description</string>
 	</dict>
 </dict>
 </plist>
