Matching the version uploaded to figma.com
Fixes Async operation.

--- a/Replacer/manifest.json
+++ b/Replacer/manifest.json
@@ -1,10 +1,11 @@
 {
   "name": "Replacer",
-  "id": "replacer-combined",
+  "id": "1491101197950461566",
   "api": "1.0.0",
   "main": "code.js",
   "ui": "ui.html",
   "editorType": ["figma"],
+  "documentAccess": "dynamic-page",
   "networkAccess": {
     "allowedDomains": ["none"]
   }
